style.css
/* Rules outside of any media queries apply to all devices (mobile-first). */
html {
  --primary-color: #7232da;
  --secondary-color: #a48ebe;
  --text-primary-color: #fbeaff;
  --text-secondary-color: #b3316d;
}

body {
  font-family: "Poppins", sans-serif;
  font-size: 10px;
  height: 100vh;
}

h1 {
  color: var(--text-primary-color);
  font-size: 4.209em;
}

h2 {
  font-size: 2.157em;
  margin: 0;
  color: var(--text-secondary-color);
  text-align: center;
}

h3 {
  color: rgba(255, 0, 255, 0.623);
  font-size: 2.369em;
  margin: 0;
}

li,
p,
label,
input,
button {
  font-size: 1.777em;
}

figure,
img {
  /* Limit the width of all 'figures' and 'imgs' to be at most 100% of the size of the parent. */
  max-width: 100%;
}

header {
  background-color: var(--primary-color);
  padding: 1rem;
  text-align: center;
}

ul {
  list-style-type: none;
  padding: 0;
}

p {
  margin: 0;
  /* First number is top and bottom.
    Second number is left and right. */
  padding: 2rem;
  text-align: center;

  /* TODO{nichole}: Consider removing this rule. */
  /* height: 80vw; */
}

form div {
  margin: 0.25rem 0;
  width: 80vw;
}

label {
  margin-right: 0.25rem;
}

input {
  width: 100%;
}

input[type="radio"] {
  width: 2.5rem;
}

input,
textarea {
  border: solid thin var(--primary-color);
  border-radius: 3px;
}

footer {
  background: var(--primary-color);
  color: var(--text-primary-color);
  padding: 1.5rem;
  text-align: left;
}

/* Scope this for just #jobs. */
#jobs div {
  border-bottom: solid thin var(--secondary-color);
  border-radius: 0.25rem;
  box-shadow: 0 1rem 1.5rem -3px rgba(0, 0, 0, 0.1),
    0 0.4rem 0.6rem -2px rgba(0, 0, 0, 0.05);
  margin: 2rem 0;
  padding-bottom: 2rem;
  text-align: center;
}

.align-center {
  align-items: center;
}

.button {
  background: var(--secondary-color);
  border-radius: 3px;
  padding: 0.5rem;
}

.button--submit {
  background-color: green;
  color: white;
}

.button a {
  text-decoration: none;
}

/* If your width and height are the same,
  border-radius: 50% will make it look like a circle. */
.button--circle {
  border-radius: 50%;
  height: 8rem;
  width: 8rem;
}

.flex {
  display: flex;
}

.flex--column {
  flex-direction: column;
  padding: 0.5rem;
}

.flex--wrap {
  flex-wrap: wrap;
}

.justify-center {
  justify-content: center;
}

.justify-space-around {
  justify-content: space-around;
}

.justify-space-between {
  justify-content: space-between;
}

.text-align-center {
  text-align: center;
}

@media screen and (min-width: 768px) {
  .flex--sm {
    display: flex;
    font-size: 30px;
  }
}

@media screen and (min-width: 885px) {
  #hero {
    background: url(./images/image001.jpg) top center no-repeat;
    background-size: cover;
    height: 75vh;
    width: 100vw;
  }

  .flex--md {
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    min-height: min-content;
  }

  /* Direct child selector. */
  #jobs > div {
    padding: 0;
    border: solid 3px var(--secondary-color);
    border-radius: 0.25rem;
    margin: 2rem 1rem;
    width: calc(33vw - 2rem);
  }
}
@media screen and (min-width: 1440px) {
  figure {
    margin: 0;
  }

  /* Direct child selector. */
  #jobs > div {
    /* TODO: Look up box-shadow on MDN. */
    border: solid 3px var(--secondary-color);
    border-radius: 0.25rem;
    margin: 2rem 1rem;
    width: calc(33vw - 2rem);
  }
}

/* Style inputs for Contact Page */
input[type="text"],
select,
textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */
  border: 1px solid #ccc; /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
}

/* Style the submit button with a specific background color etc */
input[type="submit"] {
  background-color: #5b4caf;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  transition-duration: 0.5s;
  cursor: pointer;
}

input[type="submit"]:hover {
  background-color: #a0457a;
}

/* Add a background color and some padding around the form */
.container {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
}

